# djyayo

./: .gitignore  Introduction.html  README  README.md  TODO  Web_Socket.html  index.html  mep.sh  server.Dockerfile  web.Dockerfile
REST_API/: Introduction.html  login.html  me.html  room.addAdmin.html  room.create.html  room.delAdmin.html  room.deleteTrack.html  room.history.html  room.html  room.nextTrack.html  room.search.html  room.unvote.html  room.users.html  room.vote.html  rooms.html
docs/: 00_Introduction.md  60_Web_Socket.md  config.json
docs/50_REST_API/: 00_Introduction.md  10_login.md  10_me.md  10_rooms.md  20_room.md  30_room.addAdmin.md  30_room.create.md  30_room.delAdmin.md  30_room.deleteTrack.md  30_room.history.md  30_room.nextTrack.md  30_room.search.md  30_room.unvote.md  30_room.users.md  30_room.vote.md
src/: TODO
src/player/: Application.coffee  CommandGenerator.coffee  Communicator.coffee  Player.coffee  Player.pro  launch.sh  main.coffee  nodespotify.node  player.pro
src/player/cpp/: CMakeLists.txt
src/player/cpp/include/: Application.h  CircularBuffer.hpp  Command.h  Communicator.h  Config.h  EventEmitter.h  EventEmitter.hpp  FdStream.h  IOService.h  Socket.h  Socket.hpp  Spotify.h  SpotifyObject.h  main.c
src/player/cpp/include/when/: Defered.h  Defered.hpp  Promise.h  Promise.hpp
src/player/cpp/src/: Application.cpp  AudioData.cpp  AudioPlayer.cpp  Command.cpp  Communicator.cpp  Config.cpp  FdStream.cpp  IOService.cpp  Socket.cpp  Spotify.cpp  SpotifyObject.cpp  main.cpp
src/playerJs/: Application.coffee  Command.coffee  (+4 more)
(+227 files in other folders)
