CMAKE_MINIMUM_REQUIRED (VERSION 2.6)
PROJECT (player)


list(APPEND CMAKE_CXX_FLAGS "-std=c++0x -Wall")


SET (NAME "player")
SET (SRC_DIR "src")
SET (INCLUDES_DIR "include")

LIST (APPEND SRC "${SRC_DIR}/Application.cpp")
LIST (APPEND SRC "${SRC_DIR}/AudioData.cpp")
LIST (APPEND SRC "${SRC_DIR}/AudioFormat.cpp")
LIST (APPEND SRC "${SRC_DIR}/AudioPlayer.cpp")
LIST (APPEND SRC "${SRC_DIR}/Command.cpp")
LIST (APPEND SRC "${SRC_DIR}/Communicator.cpp")
LIST (APPEND SRC "${SRC_DIR}/EventEmitter.cpp")
LIST (APPEND SRC "${SRC_DIR}/FdStream.cpp")
LIST (APPEND SRC "${SRC_DIR}/IOService.cpp")
LIST (APPEND SRC "${SRC_DIR}/main.cpp")
LIST (APPEND SRC "${SRC_DIR}/Spotify.cpp")
LIST (APPEND SRC "${SRC_DIR}/SpotifyObject.cpp")


ADD_EXECUTABLE(${NAME} ${SRC})
INCLUDE_DIRECTORIES (${INCLUDES_DIR})
FIND_LIBRARY (EVENT_LIB "event")
FIND_LIBRARY (EVENT_PTHREAD_LIB "event_pthreads")
FIND_LIBRARY (SPOTIFY_LIB "spotify")
FIND_LIBRARY (PORTAUDIO_LIB "portaudio")
TARGET_LINK_LIBRARIES(${NAME} ${CMAKE_THREAD_LIBS_INIT})
TARGET_LINK_LIBRARIES(${NAME} ${EVENT_LIB})
TARGET_LINK_LIBRARIES(${NAME} ${EVENT_PTHREAD_LIB})
TARGET_LINK_LIBRARIES(${NAME} ${SPOTIFY_LIB})
TARGET_LINK_LIBRARIES(${NAME} ${PORTAUDIO_LIB})
